<resources>
    <string name="msalPrefix">msal8374f801-0f55-407d-80cc-9a04fe86d9b2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_file_storage_setup">FileStorageSetupActivity</string>
  <string name="about_feedback">Feedback</string>
  <string name="about_homepage">Homepage</string>
  <string name="AboutText">Keepass2Android is a password manager providing read/write access to KeePass 2.x databases on Android.</string>
  <string name="CreditsText">The User Interface is based on a port of KeepassDroid developed by Brian Pellin. Code for database operations is based on KeePass by Dominik Reichl. The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
  <string name="accept">Accept</string>
  <string name="add_entry">Add entry</string>
  <string name="add_url_entry">Create entry for URL</string>
  <string name="add_group">Add group</string>
  <string name="add_group_title">Add Group</string>
  <string name="edit_group_title">Edit Group</string>
  <string name="algorithm">Algorithm</string>
  <string name="algorithm_colon">Algorithm</string>
  <string name="app_name">Keepass2Android</string>
  <string name="short_app_name">KP2A</string>
  <string name="app_name_nonet">Keepass2Android Offline</string>
  <string name="short_app_name_nonet">KP2A Offline</string>
  <string name="app_timeout">Application timeout</string>
  <string name="app_timeout_summary">Time before locking database when the application is inactive.</string>
  <string name="kill_app_label">Kill application process</string>
  <string name="show_kill_app">Close-Button</string>
  <string name="show_kill_app_summary">Show a button in password screen to kill the application process (for paranoid users)</string>
  <string name="application">Application</string>
  <string name="application_settings">Application settings</string>
	<string name="security_prefs">Security</string>
	<string name="display_prefs">Display</string>
	<string name="password_access_prefs">Password entry access</string>
	<string name="QuickUnlock_prefs">QuickUnlock</string>
	<string name="FileHandling_prefs">File handling</string>
	<string name="brackets">Brackets</string>
  <string name="cancel">Cancel</string>
  <string name="ClearClipboard">Clipboard cleared.</string>
  <string name="clipboard_timeout">Clipboard timeout</string>
  <string name="clipboard_timeout_summary">Time before clearing clipboard after copying username or password</string>
  <string name="copy_username">Select to copy username to clipboard</string>
  <string name="copy_password">Select to copy password to clipboard</string>
  <string name="available_through_keyboard">Entry is available through KP2A Keyboard</string>
  <string name="not_possible_im_picker">Could not open dialog to select input method. Please activate keyboard manually.</string>
  <string name="please_activate_keyboard">Please enable the Keepass2Android keyboard in your system settings.</string>
  <string name="creating_db_key">Creating database key…</string>
  <string name="current_group">Current Group</string>
  <string name="current_group_root">Current Group: Root</string>
  <string name="database">Database</string>
  <string name="digits">Digits</string>
  <string name="disclaimer_formal">Keepass2Android comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL version 2 or later.</string>
  <string name="ellipsis">\u2026</string>
  <string name="enter_filename">Enter database filename</string>
  <string name="entry_accessed">Accessed</string>
  <string name="entry_cancel">Cancel</string>
  <string name="entry_comment">Comments</string>
  <string name="entry_tags">Tags</string>
  <string name="entry_override_url">Override URL</string>
  <string name="entry_confpassword">Confirm password</string>
  <string name="entry_created">Created</string>
  <string name="entry_expires">Expires</string>
  <string name="entry_keyfile">Key file (optional)</string>
  <string name="entry_modified">Modified</string>
  <string name="entry_password">Password</string>
  <string name="entry_save">Save</string>
  <string name="entry_title">Name</string>
  <string name="entry_url">URL</string>
  <string name="entry_user_name">User Name</string>
  <string name="entry_extra_strings">Extra string fields</string>
  <string name="entry_binaries">File attachments</string>
  <string name="error_can_not_handle_uri">Keepass2Android cannot handle this uri.</string>
  <string name="error_could_not_create_group">Error creating group.</string>
  <string name="error_could_not_create_parent">Could not create parent directory.</string>
  <string name="error_database_exists">This file already exists.</string>
  <string name="error_database_settings">Failed to determine database settings.</string>
  <string name="error_failed_to_launch_link">Failed to launch link.</string>
  <string name="error_filename_required">A filename is required.</string>
  <string name="error_file_not_create">Could not create file</string>
  <string name="error_invalid_db">Invalid database.</string>
  <string name="error_invalid_path">Invalid path.</string>
  <string name="error_no_name">A name is required.</string>
  <string name="error_nopass">A password or a keyfile is required.</string>
  <string name="error_pass_gen_type">At least one password generation type must be selected</string>
  <string name="error_pass_match">Passwords do not match.</string>
  <string name="error_rounds_not_number">Rounds must be a number.</string>
  <string name="error_title_required">A title is required.</string>
  <string name="error_wrong_length">Enter a positive integer on length field</string>
  <string name="FileNotFound">File not found.</string>
  <string name="file_browser">File Browser</string>
  <string name="generate_password">Generate Password</string>
  <string name="group">Group</string>
  <string name="hint_comment">comment</string>
  <string name="hint_conf_pass">confirm password</string>
  <string name="hint_generated_password">generated password</string>
  <string name="hint_group_name">Group name</string>
  <string name="hint_keyfile">key file</string>
  <string name="hint_length">length</string>
  <string name="hint_pass">password</string>
  <string name="hint_login_pass">Password</string>
  <string name="hint_title">name</string>
  <string name="hint_url">url</string>
  <string name="hint_override_url">override url</string>
  <string name="hint_tags">tag1, tag2</string>
  <string name="hint_username">username</string>
  <string name="InvalidPassword">Invalid password or key file.</string>
  <string name="invalid_algorithm">Invalid algorithm.</string>
  <string name="invalid_db_sig">Database format not recognized.</string>
  <string name="keyfile_does_not_exist">Key file does not exist.</string>
  <string name="keyfile_is_empty">Key file is empty.</string>
  <string name="length">Length</string>
  <string name="list_size_title">Group list size</string>
  <string name="list_size_summary">Text size in the group list</string>
  <string name="loading_database">Loading database…</string>
  <string name="lowercase">Lower-case</string>
  <string name="MaskedPassword">*****</string>
  <string name="maskpass_title">Mask password</string>
  <string name="maskpass_summary">Hide passwords by default</string>
  <string name="menu_about">About</string>
  <string name="menu_change_key">Change Master Key</string>
  <string name="menu_copy_pass">Copy Password</string>
  <string name="menu_copy_user">Copy User</string>
  <string name="menu_create">Create</string>
  <string name="menu_app_settings">Settings</string>
  <string name="menu_db_settings">Database settings</string>
  <string name="menu_delete">Delete</string>
  <string name="menu_move">Move to another group</string>
  <string name="menu_donate">Donate a beer...</string>
  <string name="menu_edit">Edit</string>
  <string name="menu_hide_password">Hide Password</string>
  <string name="menu_lock">Lock Database</string>
  <string name="menu_open">Open</string>
  <string name="menu_rename">Rename</string>
  <string name="menu_search">Search</string>
  <string name="menu_search_advanced">Advanced Search</string>
  <string name="menu_url">Go to URL</string>
	<string name="menu_change_db">Change database…</string>
  <string name="minus">Minus</string>
  <string name="never">Never</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="no_keys">No entries in the database or group.</string>
  <string name="no_results">No search results</string>
  <string name="no_url_handler">No handler for this url.</string>
  <string name="open_recent">Open recent database (click to open)</string>
  <string name="omitbackup_title">Don\'t search backup and recycle bin entries</string>
  <string name="omitbackup_summary">Omit \'Backup\' and Recycle Bin group from search results</string>
  <string name="pass_filename">KeePass database filename</string>
  <string name="password_title">Enter database password</string>
  <string name="master_key_type">Select master key type:</string>
  <string name="progress_create">Creating new database…</string>
  <string name="create_database">Create database</string>
  <string name="progress_title">Working…</string>
  <string name="remember_keyfile_summary">Remembers the location of keyfiles</string>
  <string name="remember_keyfile_title">Save keyfile</string>
  <string name="remove_from_filelist">Remove</string>
  <string name="rijndael">Rijndael (AES)</string>
  <string name="root">Root</string>
  <string name="rounds">Encryption Rounds</string>
  <string name="rounds_explaination">Higher encryption rounds provide additional protection against brute force attacks, but can really slow down loading and saving.</string>
  <string name="rounds_hint">rounds</string>
  <string name="database_name">Database name</string>
  <string name="default_username">Default user name for new entries</string>
  <string name="saving_database">Saving database…</string>
  <string name="space">Space</string>
  <string name="search_label">Search</string>
  <string name="show_password">Show password</string>
  <string name="sort_name">Sort by name</string>
  <string name="sort_db">Sort by creation date</string>
  <string name="special">Special</string>
  <string name="search_hint">Find what</string>
  <string name="search_results">Search results</string>
  <string name="search_in">Search in</string>
  <string name="select_other_entry">Select another entry</string>
  <string name="select_group_then_add">Open the desired group, then press "%1$s"!</string>
	<string name="insert_element_here">Insert here</string>
  <string name="twofish">Twofish</string>
  <string name="underline">Underline</string>
  <string name="unsupported_db_version">Unsupported database version.</string>
  <string name="uppercase">Upper-case</string>
  <string name="warning_read_only">Your sd card is currently read-only. You may not be able to save changes to your database.</string>
  <string name="warning_unmounted">Your sd card is not currently mounted on your device. You will not be able to load or create your database.</string>
  <string name="version_label">Version</string>
	<string name="version_history">Version history</string>
	<string name="author">Keepass2Android is developed by Philipp Crocoll.</string>
	<string name="further_authors">Thanks to code contributions by %1$s.</string>
	<string name="hint_sftp_host">host</string>
	<string name="hint_sftp_port">port</string>
    <string name="hint_sftp_connect_timeout">timeout sec</string>
	<string name="initial_directory">Initial dir (optional):</string>
</resources>