<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of Keepass2Android, Copyright 2025 Philipp Crocoll.

   Keepass2Android is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   Keepass2Android is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Keepass2Android.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="12dip">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sftp_host"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:text=""
            android:hint="@string/hint_sftp_host" />
        <TextView
            android:id="@+id/portsep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />
        <EditText
            android:id="@+id/sftp_port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:singleLine="true"
            android:inputType="number"
            android:text="22"
            android:hint="@string/hint_sftp_port" />
        <EditText
            android:id="@+id/sftp_connect_timeout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:singleLine="true"
            android:inputType="number"
            android:text=""
            android:hint="@string/hint_sftp_connect_timeout" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sftp_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text=""
            android:hint="@string/hint_username" />
        <EditText
            android:id="@+id/sftp_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text=""
            android:hint="@string/hint_pass"
            android:importantForAccessibility="no" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/initial_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_marginTop="4dip"
            
            android:text="@string/initial_directory" />
        <EditText
            android:id="@+id/sftp_initial_dir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:singleLine="true"
            android:text="/home/philipp"
             />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/kex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:text=""
            android:hint="KEX Algs" />
        <EditText android:id="@+id/shk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:text=""
            android:hint="Server Host Key Algs" />
    </LinearLayout>
    <Button android:id="@+id/send_public_key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="send public key" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="Private Keys Functions" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/list_private_keys"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="List" />
        <Button android:id="@+id/add_private_key"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add" />
        <Button android:id="@+id/delete_private_key"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />
        <Button android:id="@+id/validate_private_key"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Validate" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <EditText android:id="@+id/private_key_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:inputType="textNoSuggestions"
        android:text=""
        android:hint="key name" />
    <EditText android:id="@+id/private_key_passphrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:inputType="textNoSuggestions"
        android:text=""
        android:hint="passphrase (optional)" />
    </LinearLayout>
    <EditText android:id="@+id/private_key_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="4"
        android:text=""
        android:hint="key content" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="CSV Resolver Functions" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/mock_csv_specs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:text=""
            android:hint="Test specs" />
        <EditText android:id="@+id/mock_csv_cfg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:text=""
            android:hint="Test config" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/reset_mock_csv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="5dp"
            android:text="Reset" />
        <Button android:id="@+id/resolve_mock_csv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="5dp"
            android:text="Resolve" />
    </LinearLayout>
</LinearLayout>
</ScrollView>